--- a/styles/home.css
+++ b/styles/home.css
@@ -218,7 +218,7 @@ header {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	gap: 40px;
+	gap: 35px;
 	padding: 45px;
 }
 
@@ -234,7 +234,7 @@ header {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	gap: 30px;
+	gap: 40px;
 	max-width: 1200px;
 	width: 100%;
 }
@@ -293,9 +293,11 @@ header {
 }
 
 .title {
-	font-size: 1.8rem;
+	font-size: 1.5rem;
 	margin-bottom: 10px;
-	font-weight: 700;
+	font-weight: 800;
+	font-family: 'quicksand';
+	text-align: center;
 }
 
 .highlight {
@@ -402,8 +404,9 @@ header {
 }
 
 .price {
-	font-size: 2.2rem;
-	font-weight: bold;
+	font-size: 2.1rem;
+	font-weight: 600;
+	font-family: 'Poppins SemiBold';
 	margin: 0;
 	background: linear-gradient(90deg, #4a2ed6, #6a3df7);
 	-webkit-background-clip: text;
@@ -412,21 +415,14 @@ header {
 	color: transparent;
 }
 
+.money {
+	font-size: 1.2rem;
+}
+
 .per {
 	font-size: 1rem;
 	color: #888;
 	margin-top: 5px;
-}
-
-@media (max-width: 768px) {
-	.packages {
-		flex-direction: column;
-		align-items: center;
-	}
-
-	.header h1 {
-		font-size: 2.5rem;
-	}
 }
 
 .btnStart {
@@ -462,41 +458,78 @@ header {
 		width: 418px;
 		font-size: 30px;
 	}
+
+	/* .packages {
+		flex-direction: ;
+	}
+} */
+
+	@media (max-width: 768px) {
+		.logo {
+			width: 30%;
+		}
+		.nav-links {
+			display: none;
+		}
+
+		.section1 {
+			padding: 10px;
+		}
+		.container1 {
+			display: grid;
+			grid-template-columns: 1fr 1fr 1fr;
+			gap: 0;
+			font-size: 13px;
+		}
+		.devices {
+			padding: 10px;
+		}
+		.devices img {
+			width: 40px;
+			margin-bottom: 8px;
+		}
+		.container1 {
+			font-size: 13px;
+			padding: 10px;
+		}
+
+		/* section 2 */
+
+		.sectionTitle {
+			font-size: 30px;
+		}
+
+		.packages {
+			flex-direction: column;
+			align-items: center;
+		}
+
+		.header h1 {
+			font-size: 2.5rem;
+		}
+	}
 }
 
-@media (max-width: 768px) {
-	.logo {
-		width: 30%;
-	}
-	.nav-links {
-		display: none;
-	}
+#section3 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 35px;
+	padding: 45px;
+}
 
-	.section1 {
-		padding: 10px;
-	}
-	.container1 {
-		display: grid;
-		grid-template-columns: 1fr 1fr 1fr;
-		gap: 0;
-		font-size: 13px;
-	}
-	.devices {
-		padding: 10px;
-	}
-	.devices img {
-		width: 40px;
-		margin-bottom: 8px;
-	}
-	.container1 {
-		font-size: 13px;
-		padding: 10px;
-	}
+#section3 image {
+	width: 100%;
+}
 
-	/* section 2 */
+.sec3div {
+	width: 540px;
+}
+.sec3div h3 {
+	font-size: 35px;
+	font-weight: 600;
+}
 
-	.sectionTitle {
-		width: 600px;
-		font-size: 30px;
-	}
+.sec3div p {
+	line-height: 30px;
 }
